[package]
name = "generative_sketches"
version = "0.1.0"
authors = ["olekspickle <22867443+olekspickle@users.noreply.github.com>"]
edition = "2018"

[dependencies]
nannou = "0.14.1"
rand = "0.7.3"
miniquad = "0.2.55"
image= "0.23.8"
termion = "1.5.5"
itertools = "0.9"
itertools-num = "0.1.3"

[lib]
name = "utils"
path = "src/utils.rs"

[[example]]
name = "lines"
path = "src/lines.rs"

[[example]]
name = "flickering"
path = "src/flickering.rs"

[[example]]
name = "joy_division"
path = "src/joy_division.rs"

