[package]
name = "generative_sketches"
version = "0.1.0"
authors = ["olekspickle <22867443+olekspickle@users.noreply.github.com>"]
edition = "2018"

[dependencies]
nannou = "0.14.1"
rand = "0.7.3"
miniquad = "0.2.55"
image= "0.23.8"
termion = "*"

[lib]
name = "utils"
path = "src/utils.rs"

[[example]]
name = "lines"
path = "src/lines.rs"

[[example]]
name = "flickering"
path = "src/flickering.rs"
