[package]
name = "generative_sketches"
version = "0.2.0"
authors = ["olekspickle <22867443+olekspickle@users.noreply.github.com>"]
edition = "2024"

[dependencies]
image= "0.24.3"
line_drawing = "1.0.0"
miniquad = "0.2.55"
project-root = "0.2.2"
termion = "1.5.5"
rand = "0.7.3"

[lib]
name = "utils"
path = "src/utils.rs"

[[example]]
name = "basic"
path = "src/basic.rs"

[[example]]
name = "maze"
path = "src/maze.rs"

[[example]]
name = "flickering"
path = "src/flickering.rs"

[[example]]
name = "joy_division"
path = "src/joy_division.rs"
